--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <div class="row">
 	<div class="col-12">
 
-	  <input type="text" id="zodiacSign" placeholder="What is your sign?" class="col-10 text-center">
+	  <input type="text" id="userInput" placeholder="What is your sign?" class="col-10 text-center">
 
-	  <button type="button" onclick="getZodiac()">Send</button>
+	  <button onclick="getZodiac()">Send</button>
 
 	</div>
 
