minor zodiacApp Update

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 
-<h1 class="bg-success text-center"> Whats your fortune?</h1>
+<h1 class="bg-success text-center animated bounce"> Whats your fortune?</h1>
 <!------------------------------INFO BOX W/ ZODIAC INPUT--------------------------->
 <div class="container">
 <div class="row">
@@ -30,18 +30,42 @@
 
 	</div>
 
-	<div class="col-2">EMPTY SPACE</div>
+	<div class="col-2">
 
-	<div id="inputBox" class="border border-success col-8 mx-auto">
 
-		<h1 id="signName"></h1>
+
+
+<!-- TRY PLACING AREA THAT PRODUCES THE NAME OF THE SIGH THAT HAS BEEN INPUT IN LARGE LETTERS SO THAT YOU CAN MAKE IT ANIMATED -->
+
+
+
+
+
+	</div>
+
+	<div id="inputBox" class="border border-success col-8 mx -auto">
+
+		<h1 id="signName" class="animated bounce"></h1>
 		<h6 id="dates"></h6>
 		<h3 id="fortune"></h3>
-		<img id="image" src="">
+		<img id="image" src="" style="margin: auto;">
 	
 	</div>
 		
-	<div class="col-2">EMPTY SPACE</div>
+	<div class="col-2">
+		
+
+
+
+		<!-- TRY PLACING AREA THAT PRODUCES THE NAME OF THE SIGH THAT HAS BEEN INPUT IN LARGE LETTERS SO THAT YOU CAN MAKE IT ANIMATED -->
+
+
+
+
+
+
+		
+	</div>
 
 
 
